--- a/Saber/Saber.vcxproj
+++ b/Saber/Saber.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="CommandQueue.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Headers.h" />
+    <ClInclude Include="JobSystem.h" />
     <ClInclude Include="LockFreeQueue.h" />
     <ClInclude Include="MemoryMappedFile.h" />
     <ClInclude Include="Mesh.h" />
