--- a/Saber/Saber.vcxproj
+++ b/Saber/Saber.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="ConstantBuffer.h" />
     <ClInclude Include="D3D12MemAlloc.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="GPUResource.h" />
     <ClInclude Include="Headers.h" />
     <ClInclude Include="JobSystem.h" />
     <ClInclude Include="LockFreeQueue.h" />
