Textures wrapper class, bump mapping

--- a/.gitignore
+++ b/.gitignore
@@ -459,3 +459,4 @@ FodyWeavers.xsd
 /Resources/StaticModels/barbarian_rig_axe_2_a.glb
 /Resources/StaticModels/barb_rig.glb
 /Resources/Textures/barbarian_diffuse.dds
+/Resources/Textures/barb2_n.dds
