--- a/Saber/Saber.vcxproj.filters
+++ b/Saber/Saber.vcxproj.filters
@@ -108,6 +108,12 @@
     <ClInclude Include="ComputeObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GPUResourceLibrary.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DDSTexture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -168,6 +174,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PostProcessing.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DDSTexture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
