--- a/Saber/Saber.vcxproj
+++ b/Saber/Saber.vcxproj
@@ -173,12 +173,15 @@
     <ClInclude Include="GPUResource.h" />
     <ClInclude Include="Headers.h" />
     <ClInclude Include="HlslCppTypesRedefine.h" />
+    <ClInclude Include="IndirectCommandBuffer.h" />
+    <ClInclude Include="IndirectMeshRenderObject.h" />
     <ClInclude Include="JobSystem.h" />
     <ClInclude Include="LockFreeQueue.h" />
     <ClInclude Include="MaterialCB.h" />
     <ClInclude Include="MemoryMappedFile.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="MeshRenderObject.h" />
+    <ClInclude Include="ModelBuffers.h" />
     <ClInclude Include="PostProcessing.h" />
     <ClInclude Include="PSOLibrary.h" />
     <ClInclude Include="RenderObject.h" />
@@ -212,7 +215,6 @@
     <ClCompile Include="MaterialManager.cpp" />
     <ClCompile Include="MemoryMappedFile.cpp" />
     <ClCompile Include="Mesh.cpp" />
-    <ClCompile Include="MeshRenderObject.cpp" />
     <ClCompile Include="PostProcessing.cpp" />
     <ClCompile Include="PSOLibrary.cpp" />
     <ClCompile Include="RenderObject.cpp" />
